# controllers/users.js
@@ -27,10 +27,11 @@ const getSingle = async (req, res) => {
 const createUser = async (req, res) => {
      //#swagger.tags = ['Users']
   const user = {
+    firstName: req.body.firstName,
+    lastName: req.body.lastName,
     email: req.body.email,
-    username: req.body.username,
-    name: req.body.name,
-    ipaddress: req.body.ipaddress,
+    favoriteColor: req.body.favoriteColor,
+    birthday: req.body.birthday,
   };
   const response = await mongodb
     .getDatabase()
@@ -47,10 +48,11 @@ const updateUser = async (req, res) => {
      //#swagger.tags = ['Users']
   const userId = ObjectId(req.params.id);
   const user = {
-    username: req.body.username,
+        firstName: req.body.firstName,
+    lastName: req.body.lastName,
     email: req.body.email,
-    name: req.body.name,
-    ipaddress: req.body.ipaddress,
+    favoriteColor: req.body.favoriteColor,
+    birthday: req.body.birthday,
   };
   const response = await mongodb
     .getDatabase()
